works, dry new record in erb

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,7 +1,7 @@
-def new_record?
-  sync_with_transaction_state
-  @new_record
-end
+<% def new_record? %>
+  <% sync_with_transaction_state %>
+  <% @new_record %>
+<% end %>
 
 
 <%= form_for @task do |f| %>
